Fix nav bar alignment on firefox, fix link states

--- a/src/main/content/_assets/css/header.css
+++ b/src/main/content/_assets/css/header.css
@@ -20,6 +20,7 @@
 
 #tablet_nav {
     width: max-content;
+    width: -moz-fit-content;
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -146,7 +147,7 @@
         background-image: radial-gradient(circle at top right, #5E6B8D 0%, #2C2E50 91%);
     }
 
-    .navbar-light .navbar-nav .nav-link, #fork_button {
+    .navbar-light .navbar-nav .nav-link, .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:active, #fork_button {
         font-family: BunueloLight;
         font-size: 35px;
         color: #FFFFFF;
